# humanize-plugin

./: .gitignore  .mcp.json  Cargo.toml  Dockerfile.humanize  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
docs/: architecture.md  telemetry.md
skills/humanize-workflows/: SKILL.md
src/: input_ledger.rs  lib.rs  participant_binding.rs  pipe_sink.rs  pipe_sink_cli.rs  private_state.rs  review.rs  run_assets.rs  state_path.rs  tmux_guard.rs  transcript.rs
src/adapters/: hooks.rs  lifecycle.rs  mod.rs  tmux.rs
src/client_config/: hooks.rs  mod.rs
src/driver/: actuation.rs  capabilities.rs  client.rs  delivery.rs  flow_lock.rs  ipc.rs  mod.rs  participant.rs  protocol.rs  (+10 more)
tests/: bootstrap.rs  cargo_install_layout.rs  client_config.rs  client_config_cli.rs  distribution.rs  driver_cli.rs  driver_ipc.rs  driver_ipc_bounds.rs  driver_mutation_consistency.rs  driver_recovery_safety.rs  durable_records.rs  fake_tmux_fixture.rs  flow_check.rs  flow_package.rs  flow_predicate.rs  flow_predicate_consistency.rs  flow_review_store.rs  flow_work_profile.rs  input_classifier.rs  kernel.rs  mcp_authoring.rs  mcp_driver_attach.rs  mcp_driver_messages.rs  mcp_driver_proxy.rs  mcp_driver_run_flow.rs  mcp_driver_safety.rs  mcp_flow_package.rs  mcp_participant.rs  mcp_review_restart.rs  mcp_run_assets.rs  mcp_run_assets_cleanup.rs  mcp_run_assets_lifecycle.rs  mcp_run_assets_regression.rs  mcp_runtime.rs  mcp_surface.rs  mcp_tmux_runtime.rs  mcp_view.rs  pipe_sink.rs  public_compat.rs  public_journal.rs  (+12 more)
(+84 files in other folders)
