[workspace]
members = ["."]
resolver = "3"

[package]
name = "humanize-plugin"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Local MCP-first workflow runtime plugin."

[lib]
name = "humanize_plugin"
path = "src/lib.rs"

[[bin]]
name = "humanize-plugin-mcp"
path = "src/bin/humanize-plugin-mcp.rs"

[[bin]]
name = "humanize-plugin-driver"
path = "src/bin/humanize-plugin-driver.rs"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25.1"
